// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expense List with empty message. 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render Expense list with expenses. 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1.8}
      createdAt={1545494400000}
      description="Apple"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={1.7}
      createdAt={1549036800000}
      description="Banana"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={1.6}
      createdAt={1549468800000}
      description="Orange"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
